--- a/.github/workflows/dotnet-cli-dev.yml
+++ b/.github/workflows/dotnet-cli-dev.yml
@@ -21,7 +21,7 @@ jobs:
   checkout_dotnet:
     strategy:
       matrix:
-        configuration: [ Debug, Release ]
+        configuration: [ Debug ]
         platform: [ x64 ]
         dotnet_version: [ net6.0 ]
     runs-on: windows-2022
@@ -43,7 +43,7 @@ jobs:
     needs: [ checkout_dotnet ]
     strategy:
       matrix:
-        configuration: [ Debug, Release ]
+        configuration: [ Debug ]
         platform: [ x64 ]
         dotnet_version: [ net6.0 ]
     steps:
@@ -79,7 +79,7 @@ jobs:
     needs: [ restore_dotnet ]
     strategy:
       matrix:
-        configuration: [ Debug, Release ]
+        configuration: [ Debug ]
         platform: [ x64 ]
         dotnet_version: [ net6.0 ]
     steps:
@@ -119,7 +119,7 @@ jobs:
     needs: [ build_dotnet ]
     strategy:
       matrix:
-        configuration: [ Debug, Release ]
+        configuration: [ Debug ]
         platform: [ x64 ]
         dotnet_version: [ net6.0 ]
     steps:
@@ -153,7 +153,7 @@ jobs:
     needs: [ build_dotnet ]
     strategy:
       matrix:
-        configuration: [ Debug, Release ]
+        configuration: [ Debug ]
         platform: [ x64 ]
         dotnet_version: [ net6.0 ]
     steps:
@@ -187,7 +187,7 @@ jobs:
     needs: [ build_dotnet ]
     strategy:
       matrix:
-        configuration: [ Debug, Release ]
+        configuration: [ Debug ]
         platform: [ x64 ]
         dotnet_version: [ net6.0 ]
     steps:
@@ -221,7 +221,7 @@ jobs:
     needs: [ build_dotnet ]
     strategy:
       matrix:
-        configuration: [ Debug, Release ]
+        configuration: [ Debug ]
         platform: [ x64 ]
         dotnet_version: [ net6.0 ]
     steps:
