--- a/.github/workflows/dotnet-console-desktop-dev.yml
+++ b/.github/workflows/dotnet-console-desktop-dev.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         configuration: [ Debug ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     runs-on: windows-2022
     steps:
     - name: Checkout
@@ -45,7 +45,7 @@ jobs:
       matrix:
         configuration: [ Debug ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: restore cache workspace 
         uses: actions/cache@v3
@@ -81,7 +81,7 @@ jobs:
       matrix:
         configuration: [ Debug ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v1.1.3
@@ -123,7 +123,7 @@ jobs:
       matrix:
         configuration: [ Debug ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
@@ -151,7 +151,7 @@ jobs:
       matrix:
         configuration: [ Debug ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
@@ -179,7 +179,7 @@ jobs:
       matrix:
         configuration: [ Debug ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
@@ -207,7 +207,7 @@ jobs:
       matrix:
         configuration: [ Debug ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
