--- a/.github/workflows/dotnet-console-desktop.yml
+++ b/.github/workflows/dotnet-console-desktop.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         configuration: [ Release ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     runs-on: windows-2022
     steps:
     - name: Checkout
@@ -46,7 +46,7 @@ jobs:
       matrix:
         configuration: [ Release ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: restore cache workspace 
         uses: actions/cache@v3
@@ -82,7 +82,7 @@ jobs:
       matrix:
         configuration: [ Release ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v1.1.3
@@ -124,7 +124,7 @@ jobs:
       matrix:
         configuration: [ Release ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
@@ -152,7 +152,7 @@ jobs:
       matrix:
         configuration: [ Release ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
@@ -180,7 +180,7 @@ jobs:
       matrix:
         configuration: [ Release ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
@@ -208,7 +208,7 @@ jobs:
       matrix:
         configuration: [ Release ]
         platform: [ x64 ]
-        dotnet_version: [ net6.0 ]
+        dotnet_version: [ net6.0, net7.0 ]
     steps:
       - name: Setup VSTest
         uses: darenm/Setup-VSTest@v1.2
